examples/negative/effects_phase2/parse_row_unknown_effect.err.expected
error: unknown effect: Unknown
  --> examples/negative/effects_phase2/parse_row_unknown_effect.kai:8:1
    |
  8 | fn f() : Int / Unknown { 0 }
    | ^
  = note: only declared `effect Foo { ... }` names and the catalog (Console, Fail, Stdin, Env, File, State, Reader, Writer, Mutable, Ffi) are valid in a row
  = help: declare `effect Unknown { ... }` first, or fix the spelling
